# BOT

./: .gitignore  LICENSE  README.md  bot.js  cmd.js  package.json
bot-core/: .gitattributes  .gitignore  Cargo.toml  index.d.ts  index.js  package.json
bot-core/.github/workflows/: CI.yml
bot-core/src/: lib.rs  macros.rs  task.rs
cmd/: armor.js  coins.js  drop.js  eat.js  gps.js  help.js  inv.js  look.js  macro.js  pos.js  st.js  task.js
cmd-sys/: api.js  executor.js  parser.js  registry.js
macros-engine/: Cargo.toml  index.d.ts  index.js  package.json
macros-engine/src/: db.rs  lib.rs  macros.rs
